sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var lgr=getNombreValeurs();
  var ecart=lgr
  var i:Int=1
  if (ecart>1) {
    ecart=ecart/1.3
  }
  i=0
  while (i+ecart < lgr) {
    if 
  } 
                
}